# bookstore-api

./: .dockerignore  .env.example  Makefile  README.md  conftest.py  docker-compose.yml  dockerfile  pyproject.toml  pytest.ini
.github/workflows/: build.yml  deploy.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializers.py
order/tests/: test_models.py  test_order_viewset.py  test_serializers.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: __init__.py  category_serializers.py  product_serializers.py
product/tests/: test_category_viewset.py  test_factories.py  test_models.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
