[tool.poetry]
name = "bookstore-api"
version = "0.1.0"
description = "Bookstore API"
authors = ["Phillipml <contato.phillip.menezes@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bookstore"}]

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.16.1"
django-rest-framework = "^0.1.0"
django-extensions = "^4.1"
django-debug-toolbar = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-django = "^4.9.0"
factory-boy = "^3.3.3"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
